syntax = "proto3";

package tasks;
option go_package = "./pb;pb";

message Task {
  string uuid = 1;
  string url = 2;
}

message TaskResult {
  string uuid = 1;
  string result = 2;
}

message Empty {}

service TaskService {
  rpc GetAvailableTask(Empty) returns (Task) {}
  rpc CompleteTask(TaskResult) returns (Empty) {}
}
